--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			href="https://unpkg.com/aos@2.3.1/dist/aos.css"
 			rel="stylesheet" />
 		<script src="poko.js"></script>
-		<title>Snart</title>
+		<title>Baby Poko</title>
 	</head>
 	<body>
 		<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
@@ -30,12 +30,12 @@
 				<div
 					id="logo"
 					class="logo">
-					<a href="https://x.com/snartwtf">
+					<a href="https://x.com/Baby Pokowtf">
 						<img
 							src="images/twiiter.avif"
 							alt="twitter-logo" />
 					</a>
-					<a href="https://t.me/snartwtf">
+					<a href="https://t.me/Baby Pokowtf">
 						<img
 							src="images/tg-icon.avif"
 							alt="tg-logo" />
@@ -55,7 +55,7 @@
 						<span>- We are the new generation of poko </span>
 					</div>
 
-					<div class="snart">
+					<div class="Baby Poko">
 						<img
 							src="images/pooko.png"
 							alt="" />
@@ -112,39 +112,54 @@
 				</div>
 			</section>
 			<section class="section-3">
-				<div>
-					<span id="backlight-3"></span>
+				<div class="cypimg">
 					<img
 						data-aos="fade-left"
 						class="commerce"
-						src="images/snart 2.jpg"
-						alt="commerce" />
+						src="images/coingecko-seeklogo.svg"
+						alt="coingecko-seeklogo" />
+						<img
+						data-aos="fade-left"
+						class="commerce"
+						src="images/coinmarketcap-seeklogo.svg"
+						
+						alt="coingecko-seeklogo" />
+						<img
+						data-aos="fade-left"
+						class="commerce"
+						src="images/dextools-seeklogo.svg"
+						alt="dextools" />
+						<img
+						data-aos="fade-left"
+						class="commerce"
+						src="images/dexscreener+logo_transparent.png"
+						alt="dextools" />
 				</div>
 				<div
 					data-aos="fade-left"
-					class="p2p-loans">
-					<b>TOKENOMICS </b>
+					class="poko">
+					<b>Pokonomics </b>
 
 					<div class="p2p-info">
 						<p>
-							SNART is a groundbreaking meme token based on the BASE chain,
-							distinguished by its 0% tax rate. As the partner of SNORT, SNART
-							embodies the playful and innovative spirit of the BASE chain
+							Baby Poko is a groundbreaking meme token across multiple chains,
+							distinguished by its 0% tax rate. As the partner of POKO, Baby
+							Poko embodies the playful and innovative spirit of the memecoin
 							ecosystem. Designed to bring a touch of humor and creativity to
-							the crypto community, SNART positions itself as the "girlfriend"
-							of SNORT, offering users a unique and entertaining experience.
+							the crypto community, Baby Poko positions itself as the "son" of
+							POKO, offering users a unique and entertaining experience.
 						</p>
 					</div>
 					<div class="button">
-						<a href="https://t.me/snartwtf">
+						<a href="https://t.me/Baby Pokowtf">
 							<button>Join Community</button>
 						</a>
 					</div>
 				</div>
-				<div class="tools">
+				<!-- <div class="tools">
 					<div class="email">
 						<h1>Official Email</h1>
-						<p>snartwtf@outlook.com</p>
+						<p>Baby Pokowtf@outlook.com</p>
 					</div>
 					<a
 						href="https://www.dextools.io/app/en/base/pair-explorer/0x34f9f222edd5bd1e31f0e416b4499b09c95aaba5?t=1714229476187">
@@ -152,7 +167,7 @@
 							<h1>Dextools</h1>
 						</div>
 					</a>
-				</div>
+				</div> -->
 			</section>
 			<div class="check">
 				<ul>
@@ -331,24 +346,24 @@
 				<div class="sect-cont">
 					<div class="lasimag">
 						<img
-							src="images/snart1.jpg"
+							src="images/Baby Poko1.jpg"
 							alt="" />
 					</div>
 					<div class="buttons">
-						<a href="https://t.me/snartwtf">
+						<a href="https://t.me/Baby Pokowtf">
 							<button>Telegram</button>
 						</a>
-						<a href="https://x.com/snartwtf">
+						<a href="https://x.com/Baby Pokowtf">
 							<button>Twitter</button>
 						</a>
 						<a href="https://app.uniswap.org/">
-							<button>Buy $SNART</button>
+							<button>Buy $Baby Poko</button>
 						</a>
 					</div>
 				</div>
 			</section>
 			<footer>
-				<p>Alrights Reserved 2024. $SNART</p>
+				<p>Alrights Reserved 2024. $Baby Poko</p>
 			</footer>
 		</main>
 	</body>
