--- a/index.html
+++ b/index.html
@@ -118,18 +118,17 @@
 						class="commerce"
 						src="images/coingecko-seeklogo.svg"
 						alt="coingecko-seeklogo" />
-						<img
+					<img
 						data-aos="fade-left"
 						class="commerce"
 						src="images/coinmarketcap-seeklogo.svg"
-						
 						alt="coingecko-seeklogo" />
-						<img
+					<img
 						data-aos="fade-left"
 						class="commerce"
 						src="images/dextools-seeklogo.svg"
 						alt="dextools" />
-						<img
+					<img
 						data-aos="fade-left"
 						class="commerce"
 						src="images/dexscreener+logo_transparent.png"
@@ -172,21 +171,21 @@
 			<div class="check">
 				<ul>
 					<li>
-						<p>20% private sale</p>
+						<p>5% TAX</p>
 					</li>
 					<li>
-						<p>50% lp</p>
+						<p>1% REFLECTION</p>
 					</li>
 					<li>
-						<p>Supply 1B (1.000.000.000)</p>
+						<p>2% POKO BUYBACKS</p>
 					</li>
 					<li>
-						<p>7% team</p>
+						<p>2% BABYPOKO BUYBACKS</p>
 					</li>
 					<li>
-						<p>10% marketing</p>
+						<p>10 BILLION SUPLY</p>
 					</li>
-					<li><p>13% listing</p></li>
+					<li><p>4 BILLION BURNED</p></li>
 				</ul>
 			</div>
 			<hr class="section-line" />
@@ -341,7 +340,59 @@
 					</div>
 				</div>
 			</section> -->
-
+			<div class="container py-5">
+				<h1>Baby Poko Roadmap</h1>
+				<div class="main-timeline-4 text-white">
+					<div class="timeline-4 left-4">
+						<div class="card gradient-custom">
+							<div class="card-body p-4">
+								<i class="fas fa-campground fa-2x mb-3"></i>
+								<h4>PHASE 1</h4>
+								<p class="small text-white-50 mb-4">Soft Launch</p>
+								<ul>
+									<li>Groupup Team</li>
+									<li>Collect Ideas</li>
+									<li>Create and Deploy CA</li>
+									<li>Build Group members</li>
+									<li>Whitepaper Release</li>
+									<li>Website release</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="timeline-4 right-4">
+						<div class="card gradient-custom-4">
+							<div class="card-body p-4">
+								<i class="fas fa-sun fa-2x mb-3"></i>
+								<h4>PHASE 2</h4>
+								<p class="small text-white-50 mb-4">Growth</p>
+								<ul>
+									<li>Bridge Solana and Base chain</li>
+									<li>500 holders</li>
+									<li>1000 group members</li>
+									<li>Audit</li>
+									<li>Marketing Campaign</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="timeline-4 left-4">
+						<div class="card gradient-custom">
+							<div class="card-body p-4">
+								<i class="fas fa-palette fa-2x mb-3"></i>
+								<h4>PHASE 3</h4>
+								<p class="small text-white-50 mb-4">Expansion</p>
+								<ul>
+									<li>Coin Marketcap Listing</li>
+									<li>Coingecko Listing</li>
+									<li>Dexscreener Listing</li>
+									<li>Marketing Campaign</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 			<section class="section-6">
 				<div class="sect-cont">
 					<div class="lasimag">
