--- a/index.html
+++ b/index.html
@@ -112,28 +112,6 @@
 				</div>
 			</section>
 			<section class="section-3">
-				<div class="cypimg">
-					<img
-						data-aos="fade-left"
-						class="commerce"
-						src="images/coingecko-seeklogo.svg"
-						alt="coingecko-seeklogo" />
-					<img
-						data-aos="fade-left"
-						class="commerce"
-						src="images/coinmarketcap-seeklogo.svg"
-						alt="coingecko-seeklogo" />
-					<img
-						data-aos="fade-left"
-						class="commerce"
-						src="images/dextools-seeklogo.svg"
-						alt="dextools" />
-					<img
-						data-aos="fade-left"
-						class="commerce"
-						src="images/dexscreener+logo_transparent.png"
-						alt="dextools" />
-				</div>
 				<div
 					data-aos="fade-left"
 					class="poko">
@@ -154,6 +132,34 @@
 							<button>Join Community</button>
 						</a>
 					</div>
+				</div>
+				<div class="cypimg">
+					<img
+						data-aos="fade-left"
+						class="commerce"
+						src="images/coingecko-seeklogo.svg"
+						alt="coingecko-seeklogo" />
+					<a
+						href="https://coinmarketcap.com/dexscan/bsc/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea/">
+						<img
+							data-aos="fade-left"
+							class="commerce"
+							src="images/coinmarketcap-seeklogo.svg"
+							alt="coingecko-seeklogo" />
+					</a>
+					<img
+						data-aos="fade-left"
+						class="commerce"
+						src="images/dextools-seeklogo.svg"
+						alt="dextools" />
+					<a
+						href="https://dexscreener.com/bsc/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea">
+						<img
+							data-aos="fade-left"
+							class="commerce"
+							src="images/dexscrn.png"
+							alt="dextools" />
+					</a>
 				</div>
 				<!-- <div class="tools">
 					<div class="email">
@@ -397,7 +403,7 @@
 				<div class="sect-cont">
 					<div class="lasimag">
 						<img
-							src="images/Baby Poko1.jpg"
+							src="images/poko5.jpeg"
 							alt="" />
 					</div>
 					<div class="buttons">
