--- a/index.html
+++ b/index.html
@@ -147,11 +147,14 @@
 							src="images/coinmarketcap-seeklogo.svg"
 							alt="coingecko-seeklogo" />
 					</a>
-					<img
-						data-aos="fade-left"
-						class="commerce"
-						src="images/dextools-seeklogo.svg"
-						alt="dextools" />
+					<a
+						href="https://www.dextools.io/app/en/bnb/pair-explorer/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea?t=1713823208613">
+						<img
+							data-aos="fade-left"
+							class="commerce"
+							src="images/dextools-seeklogo.svg"
+							alt="dextools" />
+					</a>
 					<a
 						href="https://dexscreener.com/bsc/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea">
 						<img
