--- a/index.html
+++ b/index.html
@@ -95,13 +95,48 @@
 			<section class="section-e">
 				<p class="ca">Contract Address</p>
 				<div class="contract-cont">
+					<p>BNB:</p>
 					<input
 						type="text"
-						value="0xB0231df9022EBC968867C3DC4bE7d3cb67eFaBD8"
+						value="0xb2F4F4FA7a1e8A1C372091D7a7d9a95882bf5E83"
 						id="ca-num"
 						readonly />
 					<svg
-						onclick="copyToClipboard()"
+						onclick="copyToClipboard(event)"
+						id="fsvg"
+						xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 512 512"
+						fill="white">
+						<path
+							d="M64 464H288c8.8 0 16-7.2 16-16V384h48v64c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V224c0-35.3 28.7-64 64-64h64v48H64c-8.8 0-16 7.2-16 16V448c0 8.8 7.2 16 16 16zM224 304H448c8.8 0 16-7.2 16-16V64c0-8.8-7.2-16-16-16H224c-8.8 0-16 7.2-16 16V288c0 8.8 7.2 16 16 16zm-64-16V64c0-35.3 28.7-64 64-64H448c35.3 0 64 28.7 64 64V288c0 35.3-28.7 64-64 64H224c-35.3 0-64-28.7-64-64z" />
+					</svg>
+				</div>
+				<div class="contract-cont">
+					<p>Solana</p>
+					<input
+						type="text"
+						value="HCz688aj6puhJBUJvJMBgjxbEjNoYyZcszgSskrvA9r1"
+						id="ca-num"
+						readonly />
+					<svg
+						onclick="copyToClipboard(event)"
+						id="fsvg"
+						xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 512 512"
+						fill="white">
+						<path
+							d="M64 464H288c8.8 0 16-7.2 16-16V384h48v64c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V224c0-35.3 28.7-64 64-64h64v48H64c-8.8 0-16 7.2-16 16V448c0 8.8 7.2 16 16 16zM224 304H448c8.8 0 16-7.2 16-16V64c0-8.8-7.2-16-16-16H224c-8.8 0-16 7.2-16 16V288c0 8.8 7.2 16 16 16zm-64-16V64c0-35.3 28.7-64 64-64H448c35.3 0 64 28.7 64 64V288c0 35.3-28.7 64-64 64H224c-35.3 0-64-28.7-64-64z" />
+					</svg>
+				</div>
+				<div class="contract-cont">
+					<p>Base:</p>
+					<input
+						type="text"
+						value="0xDf7D40259cDbE3d82A30d389E055C6CcB7CA87CB"
+						id="ca-num"
+						readonly />
+					<svg
+						onclick="copyToClipboard(event)"
 						id="fsvg"
 						xmlns="http://www.w3.org/2000/svg"
 						viewBox="0 0 512 512"
@@ -188,9 +223,7 @@
 					<li>
 						<p>2% POKO BUYBACKS</p>
 					</li>
-					<li>
-						<p>2% BABYPOKO BUYBACKS</p>
-					</li>
+
 					<li>
 						<p>10 BILLION SUPLY</p>
 					</li>
@@ -396,6 +429,23 @@
 									<li>Coingecko Listing</li>
 									<li>Dexscreener Listing</li>
 									<li>Marketing Campaign</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="timeline-4 right-4">
+						<div class="card gradient-custom-4">
+							<div class="card-body p-4">
+								<i class="fas fa-sun fa-2x mb-3"></i>
+								<h4>PHASE 4</h4>
+								<p class="small text-white-50 mb-4">Explosion</p>
+								<ul>
+									<li>Launch of BabyPoko Merchandise Store</li>
+									<li>Integration of DeFi Features</li>
+									<li>Gaming Partnerships</li>
+									<li>Developing utility and use cases for $BabyPOKO</li>
+									<li>Continuous marketing efforts</li>
+									<li>Further token burns and buybacks</li>
 								</ul>
 							</div>
 						</div>
