--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 						</p>
 					</div>
 					<div class="button">
-						<a href="https://t.me/Baby Pokowtf">
+						<a href="https://t.me/Baby Pokow">
 							<button>Join Community</button>
 						</a>
 					</div>
@@ -174,30 +174,33 @@
 						class="commerce"
 						src="images/coingecko-seeklogo.svg"
 						alt="coingecko-seeklogo" />
-					<a
-						href="https://coinmarketcap.com/dexscan/bsc/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea/">
-						<img
-							data-aos="fade-left"
-							class="commerce"
-							src="images/coinmarketcap-seeklogo.svg"
-							alt="coingecko-seeklogo" />
-					</a>
-					<a
-						href="https://www.dextools.io/app/en/bnb/pair-explorer/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea?t=1713823208613">
-						<img
-							data-aos="fade-left"
-							class="commerce"
-							src="images/dextools-seeklogo.svg"
-							alt="dextools" />
-					</a>
-					<a
-						href="https://dexscreener.com/bsc/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea">
-						<img
-							data-aos="fade-left"
-							class="commerce"
-							src="images/dexscrn.png"
-							alt="dextools" />
-					</a>
+					<!-- <a -->
+					<!-- href="https://coinmarketcap.com/dexscan/bsc/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea/"> -->
+					<img
+						data-aos="fade-left"
+						data-url="https://coinmarketcap.com/dexscan/bsc/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea/"
+						class="commerce"
+						src="images/coinmarketcap-seeklogo.svg"
+						alt="coingecko-seeklogo" />
+					<!-- </a> -->
+					<!-- <a -->
+					<!-- href="https://www.dextools.io/app/en/bnb/pair-explorer/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea?t=1713823208613"> -->
+					<img
+						data-aos="fade-left"
+						data-url="https://www.dextools.io/app/en/bnb/pair-explorer/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea?t=1713823208613"
+						class="commerce"
+						src="images/dextools-seeklogo.svg"
+						alt="dextools" />
+					<!-- </a> -->
+					<!-- <a -->
+					<!-- href="https://dexscreener.com/bsc/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea"> -->
+					<img
+						data-aos="fade-left"
+						data-url="https://dexscreener.com/bsc/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea"
+						class="commerce"
+						src="images/dexscrn.png"
+						alt="dextools" />
+					<!-- </a> -->
 				</div>
 				<!-- <div class="tools">
 					<div class="email">
@@ -478,3 +481,5 @@
 		</main>
 	</body>
 </html>
+
+update links
