--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					</svg>
 				</div>
 				<div class="contract-cont">
-					<p>Solana</p>
+					<p>Solana:</p>
 					<input
 						type="text"
 						value="HCz688aj6puhJBUJvJMBgjxbEjNoYyZcszgSskrvA9r1"
