--- a/index.html
+++ b/index.html
@@ -395,12 +395,36 @@
 								<h4>PHASE 1</h4>
 								<p class="small text-white-50 mb-4">Soft Launch</p>
 								<ul>
-									<li>Groupup Team</li>
-									<li>Collect Ideas</li>
-									<li>Create and Deploy CA</li>
-									<li>Build Group members</li>
-									<li>Whitepaper Release</li>
-									<li>Website release</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Groupup Team
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Collect Ideas
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Create and Deploy CA
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Build Group members
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Whitepaper Release
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Website release
+									</li>
 								</ul>
 							</div>
 						</div>
@@ -412,11 +436,31 @@
 								<h4>PHASE 2</h4>
 								<p class="small text-white-50 mb-4">Growth</p>
 								<ul>
-									<li>Bridge Solana and Base chain</li>
-									<li>500 holders</li>
-									<li>1000 group members</li>
-									<li>Audit</li>
-									<li>Marketing Campaign</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Bridge Solana and Base chain
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />500 holders
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />1000 group members
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Audit
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Marketing Campaign
+									</li>
 								</ul>
 							</div>
 						</div>
@@ -428,10 +472,26 @@
 								<h4>PHASE 3</h4>
 								<p class="small text-white-50 mb-4">Expansion</p>
 								<ul>
-									<li>Coin Marketcap Listing</li>
-									<li>Coingecko Listing</li>
-									<li>Dexscreener Listing</li>
-									<li>Marketing Campaign</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Coin Marketcap Listing
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Coingecko Listing
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Dexscreener Listing
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Marketing Campaign
+									</li>
 								</ul>
 							</div>
 						</div>
@@ -443,12 +503,36 @@
 								<h4>PHASE 4</h4>
 								<p class="small text-white-50 mb-4">Explosion</p>
 								<ul>
-									<li>Launch of BabyPoko Merchandise Store</li>
-									<li>Integration of DeFi Features</li>
-									<li>Gaming Partnerships</li>
-									<li>Developing utility and use cases for $BabyPOKO</li>
-									<li>Continuous marketing efforts</li>
-									<li>Further token burns and buybacks</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Launch of BabyPoko Merchandise Store
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Integration of DeFi Features
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Gaming Partnerships
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Developing utility and use cases for $BabyPOKO
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Continuous marketing efforts
+									</li>
+									<li>
+										<img
+											src="images/check-dark.svg"
+											alt="" />Further token burns and buybacks
+									</li>
 								</ul>
 							</div>
 						</div>
@@ -481,5 +565,3 @@
 		</main>
 	</body>
 </html>
-
-update links
