--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 				<div
 					id="logo"
 					class="logo">
-					<a href="https://x.com/Baby Pokowtf">
+					<a href="https://twitter.com/babypoko_vip">
 						<img
 							src="images/twiiter.avif"
 							alt="twitter-logo" />
 					</a>
-					<a href="https://t.me/Baby Pokowtf">
+					<a href="https://t.me/BabyPOKO_BSC">
 						<img
 							src="images/tg-icon.avif"
 							alt="tg-logo" />
@@ -163,7 +163,7 @@
 						</p>
 					</div>
 					<div class="button">
-						<a href="https://t.me/Baby Pokow">
+						<a href="https://t.me/BabyPOKO_BSC">
 							<button>Join Community</button>
 						</a>
 					</div>
@@ -178,7 +178,7 @@
 					<!-- href="https://coinmarketcap.com/dexscan/bsc/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea/"> -->
 					<img
 						data-aos="fade-left"
-						data-url="https://coinmarketcap.com/dexscan/bsc/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea/"
+						data-url="https://coinmarketcap.com/currencies/babypoko/"
 						class="commerce"
 						src="images/coinmarketcap-seeklogo.svg"
 						alt="coingecko-seeklogo" />
@@ -187,7 +187,7 @@
 					<!-- href="https://www.dextools.io/app/en/bnb/pair-explorer/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea?t=1713823208613"> -->
 					<img
 						data-aos="fade-left"
-						data-url="https://www.dextools.io/app/en/bnb/pair-explorer/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea?t=1713823208613"
+						data-url="https://www.dextools.io/app/en/bnb/pair-explorer/0x17acf0a4fb0fee8701ebf4c530b94cce0f1361ea?t=1714633399186"
 						class="commerce"
 						src="images/dextools-seeklogo.svg"
 						alt="dextools" />
@@ -547,13 +547,13 @@
 							alt="" />
 					</div>
 					<div class="buttons">
-						<a href="https://t.me/Baby Pokowtf">
+						<a href="https://t.me/BabyPOKO_BSC">
 							<button>Telegram</button>
 						</a>
-						<a href="https://x.com/Baby Pokowtf">
+						<a href="https://twitter.com/babypoko_vip">
 							<button>Twitter</button>
 						</a>
-						<a href="https://app.uniswap.org/">
+						<a href="https://poocoin.app">
 							<button>Buy $Baby Poko</button>
 						</a>
 					</div>
