--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
 							alt="tg-logo" />
 					</a>
 				</div>
-				<!-- <div class="head-button bounce-1">
-					<button>Telegram</button>
-				</div> -->
+				<div class="head-button bounce-1">
+					<a href="https://portalbridge.com/advanced-tools/#/transfer">
+						<button>Bridge
+							<img class="bridge" src="images/left-right.png" alt="">
+						</button>
+					</a>
+				</div>
 			</header>
 		</div>
 
