--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<div class="center">
 					<div class="main-text">
 						<p>World Peace</p>
-						<span>- We are the new generation of poko </span>
+						<span>- Be the change that you wish to see in the world. </span>
 					</div>
 
 					<div class="Baby Poko">
